@startuml

title __UIUTILS's Class Diagram__\n

  package com.madrat.spaceshooter {
    package com.madrat.spaceshooter.utils {
      package com.madrat.spaceshooter.utils.uiutils {
        class CheckBox {
            - checkBox : ImageButton
            - imageUp : TextureRegionDrawable
            - imageDown : TextureRegionDrawable
            - checkBoxText : Label
            - isChecked : boolean
            + CheckBox()
            + getCheckBox()
            + getCheckBoxText()
            + isChecked()
            + setChecked()
        }
      }
    }
  }
  

  package com.madrat.spaceshooter {
    package com.madrat.spaceshooter.utils {
      package com.madrat.spaceshooter.utils.uiutils {
        class DescriptionRow {
            + description : Label
            + padTop : int
            + padBottom : int
            + padLeft : int
            + padRight : int
            + DescriptionRow()
        }
      }
    }
  }
  

  package com.madrat.spaceshooter {
    package com.madrat.spaceshooter.utils {
      package com.madrat.spaceshooter.utils.uiutils {
        class DialogAlert {
            - oldMultiplexer : InputMultiplexer
            - dialog_padding : float
            - button_pad_l : float
            - button_pad_r : float
            - button_pad_b : float
            - button_pad_t : float
            - skin : Skin
            + label : Label
            + buttonYes : TextButton
            + buttonNo : TextButton
            + DialogAlert()
            + DialogAlert()
            - setup()
            + hide()
            + show()
            + show()
            + text()
            + yesButton()
            + noButton()
            + getTextLabel()
        }
      }
    }
  }
  

  package com.madrat.spaceshooter {
    package com.madrat.spaceshooter.utils {
      package com.madrat.spaceshooter.utils.uiutils {
        class InfoDialog {
            - oldStage : Stage
            - skin : Skin
            - actBtn : TextButton
            - parent : Table
            - objectLabel : Label
            ~ descriptionRows : Array<DescriptionRow>
            - width : float
            - height : float
            - multiplexer : InputMultiplexer
            + InfoDialog()
            - setBackButton()
            - setup()
            + hide()
            + hide()
            + show()
            + show()
            + getActBtn()
            + getWidthOvverided()
            + setWidthOvverided()
            + getHeightOvverided()
            + setHeightOvverided()
            + getObjectLabel()
            + getMultiplexer()
            + getDescriptionRowCells()
        }
      }
    }
  }
  

  package com.madrat.spaceshooter {
    package com.madrat.spaceshooter.utils {
      package com.madrat.spaceshooter.utils.uiutils {
        class TextInputDialog {
            - oldStage : Stage
            - actBtn : TextButton
            - parent : Table
            - objectLabel : Label
            - textField : TextField
            - width : float
            - height : float
            - multiplexer : InputMultiplexer
            + TextInputDialog()
            - setup()
            + hide()
            + hide()
            + show()
            + show()
            + getActBtn()
            + getObjectLabel()
            + getMultiplexer()
            + getTextField()
        }
      }
    }
  }
  

  package com.madrat.spaceshooter {
    package com.madrat.spaceshooter.utils {
      package com.madrat.spaceshooter.utils.uiutils {
        class TileObject {
            - button : Button
            - text : Label
            - icon : Image
            + TileObject()
            + getButton()
            + getLabel()
            + getIcon()
        }
      }
    }
  }
  

  CheckBox -up-|> Table
  DebugRect -up-|> Rectangle
  DialogAlert -up-|> Dialog
  DebugRect -up-|> Rectangle
  InfoDialog -up-|> Dialog
  DebugRect -up-|> Rectangle
  TextInputDialog -up-|> Dialog
  DebugRect -up-|> Rectangle
  TileObject -up-|> Table
  DebugRect -up-|> Rectangle


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
